--- a/index.html
+++ b/index.html
@@ -8,22 +8,26 @@
 	<link rel="stylesheet" href="public/dist/css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="public/dist/img/favicon.png">
+	<script src="public/dist/js/modernizr-custom.js"></script>
 </head>
 
 <body>
 
-<header class="header slide black">
-	<div class="container">
-	    <img class="header-logo" src="public/dist/img/logoinaday2.png" alt="Logo in a day">
-		<span class="contact-text">by <img class="contact-logo" src="public/dist/img/logo-white.png" alt="Kobi"> collective</span>
+<header class="header">
+	<div class="page-view">
+		<div class="project"></div>
+		<div class="project"></div>
+		<div class="project"></div>
+		<div class="project"></div>
 	</div>
 </header>
 
 <section class="slide white">
 	<div class="container">
 		<div class="row introduction">
-			<div class="col-lg-5">
+			<div class="col-lg-6">
                 <div class="introduction-text">
+					<span class="contact-text justify-content-center justify-content-lg-start contact-text--upper">by <img class="contact-logo" src="public/dist/img/logo-black.png" alt="Kobi"> collective</span>
                     <h1 class="slide-title mb-5">Összefoglaló a logotervezési megközelítésünkről</h1>
                     <p>
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
@@ -36,7 +40,7 @@
                     </p>
                 </div>
 			</div>
-			<div class="col-lg-7">
+			<div class="col-lg-6">
 				<div class="introduction-box">
 				    <img class="img-fluid" src="public/dist/img/smartcommerce.png">
                 </div>
@@ -141,5 +145,9 @@
 		</div>
 	</div>
 </footer>
+
+<script src="public/dist/js/zepto.min.js"></script>
+<script src="public/dist/js/imagesloaded.pkgd.min.js"></script>
+<script src="public/dist/js/script.js"></script>
 </body>
 </html>
