--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				Lorem ipsum dolor sit amet,</p>
 			</div>
 		</div>
-		<a href="#" class="btn btn-dark mt-5 mb-5">Akarok egy logot baszki</a>
+		<a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-dark mt-5 mb-5">Akarok egy logot baszki</a>
 	</div>
 </section>
 
@@ -103,7 +103,7 @@
 				<img class="img-fluid" src="public/dist/img/projects/route4u.png">
 			</div>
 		</div>
-		<a href="#" class="btn btn-light mt-5 mb-5">Akarok egy logot baszki</a>
+		<a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-light mt-5 mb-5">Akarok egy logot baszki</a>
 	</div>
 </section>
 
@@ -128,7 +128,7 @@
 				<p class="member-text">brief, könnyed, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 			</div>
 			<div class="col-12">
-			    <a href="#" class="btn btn-dark mt-5">Akarok egy logot baszki</a>
+			    <a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-dark mt-5">Akarok egy logot baszki</a>
 			</div>
 		</div>
 	</div>
