--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
 			<div class="col-lg-6">
                 <div class="introduction-text">
 					<span class="contact-text justify-content-center justify-content-lg-start contact-text--upper">by <img class="contact-logo" src="public/dist/img/logo-black.png" alt="Kobi"> collective</span>
-                    <h1 class="slide-title mb-5">Összefoglaló a logotervezési megközelítésünkről</h1>
+                    <h1 class="slide-title mb-5">Catch on</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
-                        massa. Cum sociis natoque penatibus et
-                    </p>
-                    <p>
-                    Magnis dis parturient montes, nascetur ridiculus mus. Donec quam
-                        felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede
-                        justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut
+                        Your logo is not your brand </br>
+						Your logo is not your product </br>
+						Your logo is not your story </br>
+						</br>
+						Your logo is an identifier</br>
+						Your logo is a signpost</br>
+						Your logo is your signature</br>
+						</br>
+						Your logo doesn't need a profound narrative</br>
+						Your logo leads people to your product </br>
+						<b>It's not the logo that makes your product memorable.</br>It's the product that makes your logo memorable </b>
                     </p>
                 </div>
 			</div>
@@ -51,29 +55,26 @@
 
 <section class="slide black">
 	<div class="container">
-		<h2 class="slide-title text-center mt-5 mb-5">Hogy is működik ez nálunk?</h2>
+		<h2 class="slide-title text-center mt-5 mb-5">This is how it works for you (and for us)</h2>
 		<div class="row">
 			<div class="col-sm-6 col-md-3 step">
 			    <span class="step-number">1</span>
-				<p class="step-description">brief, könnyed, majd 3 verzió fél nap alatt Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+				<p class="step-description">Download the pdf, fill out the form, send it back, and within 12 hours you'll get three logo options. If we caught your drift, we continue to work on it for 2 more hours.</p>
 			</div>
 			<div class="col-sm-6 col-md-3 step">
 			    <span class="step-number">2</span>
-				<p class="step-description">ha van tetszés, akkor folytatjuk és 2 óra iterálás ha nem tetszik eygik sem, elejtsük el egymást.
-				Tervezhetünk hónapokig neked, nem lenne semmi sem jó.</p>
+				<p class="step-description">If you don't like our first babies, we part ways. Without you having to pay. You wouldn't like what we do, anyway. Not even after two months of redesigning it.</p>
 			</div>
 			<div class="col-sm-6 col-md-3 step">
 			    <span class="step-number">3</span>
-				<p class="step-description">2 óra névjegyre és 1 választott cumóra (levélpapir, email aláírás, stb) Lorem ipsum dolor sit amet,
-				consectetuer adipiscing elit. Aenean</p>
+				<p class="step-description">If you're still with us, we add 2 more hours of designing your name card and a product of your choice (letterhead, stamp, email signature...etc)</p>
 			</div>
 			<div class="col-sm-6 col-md-3 step">
 			    <span class="step-number">4</span>
-				<p class="step-description">elkészül az arculat 95%. Amennyiben még csavargatni akarja (hidd el nem kell) azt óradíjban beválllajuk
-				Lorem ipsum dolor sit amet,</p>
+				<p class="step-description">By this stage, we've created 95% of your brand identity. All this for 300 USD. If you want more - rest assured, you won't - we'll do that for an hourly rate of 30 USD</p>
 			</div>
 		</div>
-		<a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-dark mt-5 mb-5">Akarok egy logot baszki</a>
+		<a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-dark mt-5 mb-5">I want my logo</a>
 	</div>
 </section>
 
@@ -103,7 +104,7 @@
 				<img class="img-fluid" src="public/dist/img/projects/route4u.png">
 			</div>
 		</div>
-		<a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-light mt-5 mb-5">Akarok egy logot baszki</a>
+		<a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-light mt-5 mb-5">I want my logo</a>
 	</div>
 </section>
 
@@ -122,13 +123,13 @@
 			<div class="col-sm-6 col-md-3">
 				<span class="member-name">Juci</span>
 				<p class="member-text">brief, könnyed, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
-			</div>
+			</div>&
 			<div class="col-sm-6 col-md-3">
 				<span class="member-name">Gergő</span>
 				<p class="member-text">brief, könnyed, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
 			</div>
 			<div class="col-12">
-			    <a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-dark mt-5">Akarok egy logot baszki</a>
+			    <a href="public/dist/pdf/brief.pdf" target="_blank" class="btn btn-dark mt-5">I want my logo</a>
 			</div>
 		</div>
 	</div>
