--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 			<div class="col-sm-6 col-md-3">
 				<span class="member-name">Juci</span>
 				<p class="member-text">brief, könnyed, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
-			</div>&
+			</div>
 			<div class="col-sm-6 col-md-3">
 				<span class="member-name">Gergő</span>
 				<p class="member-text">brief, könnyed, Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
